# gymMan

./: .gitignore  logger.py  main.py  pyproject.toml  tailwind.config.js
controllers/: exercise_controller.py  exercise_step_controller.py  my_controller.py
models/: base_model.py  exercise.py  exercise_step.py
static-files/: input.css  output.css
templates/: base.mako.html  index.mako.html  tailwind.base.mako.html  tailwind.index.mako.html
