[tool.poetry]
name = "gymman"
version = "0.1.0"
description = ""
authors = ["Pete Letkeman"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"
litestar = {extras = ["sqlalchemy", "standard"], version = "^2.6.3"}
mako = "^1.3.2"
pydantic = {extras = ["email"], version = "^2.6.3"}
prometheus-client = "^0.20"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

